# livi

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt  org.sigxcpu.Livi.Devel.json  org.sigxcpu.Livi.json  run.in
.github/workflows/: flatpak.yml
.gitlab-ci/: check-consistency  uncrustify.cfg
data/: meson.build  org.sigxcpu.Livi.appdata.xml.in  org.sigxcpu.Livi.desktop.in  org.sigxcpu.Livi.desktop.in.in  org.sigxcpu.Livi.gschema.xml  org.sigxcpu.Livi.metainfo.xml.in  org.sigxcpu.Livi.metainfo.xml.in.in
debian/: changelog  control  copyright  rules
debian/tests/: control
po/: POTFILES  de.po  meson.build  tr.po
src/: livi-application.c  livi-application.h  livi-controls.c  livi-controls.h  livi-controls.ui  livi-gst-paintable.c  livi-gst-paintable.h  livi-gst-sink.c  livi-gst-sink.h  livi-mpris.c  livi-mpris.h  livi-recent-videos.c  livi-recent-videos.h  livi-url-processor.c  livi-url-processor.h  livi-utils.h  livi-window.c  livi-window.h  livi-window.ui  livi.gresource.xml  livi.gresource.xml.in  main.c  meson.build  style.css
src/dbus/: meson.build  org.mpris.MediaPlayer2.xml
src/gtk/: help-overlay.ui
subprojects/: gtk4.wrap
